--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,4 +1,3 @@
-
 .registration {
   border: 5px ridge #C0C0C0;
   border-radius: 10px;
@@ -8,16 +7,15 @@
   margin-right: auto;
   margin-top:50px;
 }
+
 .heading{
   text-align: center;
   font-family:Calibri;
   font-size: 35px;
   color:#303030;
 }
-imput{
 
-}
-.signupbtn {
+.sign-up-button {
   background-color: #A52019;
   color: #C0C0C0;
   padding: 14px 20px;
@@ -30,9 +28,11 @@ imput{
   border-radius:10px ;
   font-size: 15px;
 }
-.signupbtn:hover {
+
+.sign-up-button:hover {
   opacity:3;
 }
+
 input[type=text], input[type=email],input[type=password] {
   width: 80%;
   padding: 15px;
@@ -41,6 +41,7 @@ input[type=text], input[type=email],input[type=password] {
   border: none;
   background: #f1f1f1;
 }
+
 input[type=text]:hover{
   border: 1.5px solid #B22222;
   opacity:1.0;
@@ -50,15 +51,17 @@ input[type=email]:hover{
   border: 1.5px solid #B22222;
   opacity:1.0;
 }
+
 input[type=password]:hover{
   border: 1.5px solid  #B22222;
   opacity:1.0;
 }
-.zapomnit{
+
+.remember{
   margin-left: 30px;
 }
 
-.vxod{
+.log-in{
   background-color: #A52019;
   color: #C0C0C0;
   padding: 14px 20px;
