--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,18 +1,31 @@
 
-
 <ng-container *ngIf="isLogin; else signIn">
-  <div class="registration" >
-  <h1 class="heading" style="border-bottom: solid 2px #C0C0C0  ;"> Регистрация </h1>
+  <div class="registration">
+  <h1 class="heading" style="border-bottom: solid 2px #C0C0C0;"> Регистрация </h1>
   <input type="text" name="name" required  placeholder="Введите имя">
   <p><input type="email" name="email" required  placeholder="Введите email"> </p>
   <p><input type="password" name="pass" placeholder="Введите пароль"></p>
   <p> <input type="password" required placeholder="Повторите пароль" name="psw-repeat"></p>
   <label>
-    <input type="checkbox" checked="checked" name="remember" class="zapomnit" > Запомнить меня
+    <input type="checkbox" checked="checked" name="remember" class="remember" > Запомнить меня
   </label>
-  <p><button type="submit" class="signupbtn">Регистрация</button></p>
-  <button type="submit" class="vxod" (click)="isLogin = !isLogin">Вход</button>
+  <p><button type="submit" class="sign-up-button">Регистрация</button></p>
+  <button type="submit" class="log-in" (click)="isLogin = !isLogin">Вход</button>
 </div>
 </ng-container>
-<ng-template #signIn> <button (click)="isLogin = !isLogin" >test</button></ng-template>
+
+<ng-template #signIn>
+  <div class="registration">
+    <h1 class="heading" style="border-bottom: solid 2px #C0C0C0;"> Вход </h1>
+    <input type="text" name="name" required  placeholder="Введите имя">
+    <p><input type="email" name="email" required  placeholder="Введите email"> </p>
+    <p><input type="password" name="pass" placeholder="Введите пароль"></p>
+    <label>
+      <input type="checkbox" checked="checked" name="remember" class="remember" > Запомнить меня
+    </label>
+    <p><button type="submit" class="sign-up-button" (click)="isLogin = !isLogin">Регистрация</button></p>
+    <button type="submit" class="log-in" (click)="isLogin = !isLogin" >Вход</button>
+  </div>
+</ng-template>
+
 
