refactor(logic) - create get-start component + chanhge load components logic

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,7 +1,7 @@
 <div class="Menu">
   <ul>
-      <p><a href="">Вход/Регистрация</a></p>
-      <p><a href="">Начать работу</a></p>
+      <p><a routerLink="/login">Вход/Регистрация</a></p>
+      <p><a routerLink="/get-start">Начать работу</a></p>
       <p><a href="">Главная</a></p>
   </ul>
 </div>
