--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -41,5 +41,15 @@
       </p>
     </div>
 
+    <div class="with-google">
+      <p>Or you can Log In With Google</p>
+
+      <button
+        (click)="signInWithGoogle()"
+        class="google-auth">
+        Sign In with Google
+      </button>
+    </div>
+
   </div>
 </ng-template>
