--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,7 +9,7 @@
     <input type="checkbox" checked="checked" name="remember" class="remember" > Запомнить меня
   </label>
   <time-button
-    [text]="'Sign Up'">
+    [textButton]="'Sign Up'">
   </time-button>
 
   <div class="is-sign-in">
@@ -32,7 +32,7 @@
       <input type="checkbox" checked="checked" name="remember" class="remember" > Запомнить меня
     </label>
     <time-button
-      [text]="'Sign In'">
+      [textButton]="'Sign In'">
     </time-button>
     <div class="is-sign-in">
       <p
