feat(user-settings) - create user page

--- a/src/app/user-settings/user-settings.component.html
+++ b/src/app/user-settings/user-settings.component.html
@@ -1,3 +1,31 @@
-<p>user-settings works!</p>
+<div><div class="background" >
+</div>
+<div class="avatar">
+<p class="name"> Илья Матиек </p>
+</div>
+  <button class="button"> Управлять учётной записью </button>
 
-<button (click)="signOut()">Log Out</button>
+<div class="intel">
+  <p class="intelligence">СВЕДЕНИЯ</p>
+  <p class="web-developer"> <img src="./img/suitcase.png"/> Web Developer</p>
+
+  <p class="your-took"><img src="organization-hierarchy-3_47983"/> Ваш отдел </p>
+  <p class="your-organization"><img src="organization_4397"/> Ваша организация</p>
+  <p class="your-location"><img src="location_icon-icons.com_50109"/> Ваше местоположение</p>
+  <p class="сontact-details">КОНТАКТНЫЕ ДАННЫЕ</p>
+  <p class="mail"><img src="mail_email_message_electronic_online_web_icon-icons.com_59986"/> Почта</p>
+  <p class="teams">КОМАНДЫ</p>
+  <p class="create-a-new-team"><img src="group_theapplication_users_2907"/> Создайте новую команду</p>
+  <p class="privacy">Ознокомиться с политикой конфиденциальности</p>
+</div>
+  <p class="work">В работе</p>
+  <p class="user-access">Другие пользователи увидят только те объеккты, к которым у них есть доступ.</p>
+  <div class="at-work">
+  </div>
+  <p class="places-where-you-work">Ваши достижения</p>
+  <div class="places-where-you-work1">
+  </div>
+  <div class="places-where-you-work2">
+  </div>
+</div>
+
